added login feature

--- a/templates/US_map.html
+++ b/templates/US_map.html
@@ -30,7 +30,7 @@
         });
 
         // Create an array of alphabetical characters used to label the markers.
-        var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+        labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'
 
         // Add some markers to the map.
         // Note: The code uses the JavaScript Array.prototype.map() method to
