added basic logging feature

--- a/templates/US_map.html
+++ b/templates/US_map.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
+
     <title>Marker Clustering</title>
-    <style>
+    {% block style %}
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
@@ -16,7 +15,7 @@
         margin: 0;
         padding: 0;
       }
-    </style>
+    {% endblock %}
   </head>
   <body>
     <div id="map"></div>
