Userlog info successfully sends to database

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -33,13 +33,13 @@
         <input type='submit'>
     </form>
     
-<!-- inputs climb info -->
+<!-- logs climb info -->
     <form action='/log-climb.json' id='log-climb' method='POST'>
         <select name='route' id='route'>
         </select><br>
 
         <label>
-            <textarea name='notes' id='text' rows="4" cols="50"></textarea>
+            <textarea name='notes' id='notes' rows="4" cols="50"></textarea>
         </label><br>
         
         <label>Complete
