cleaned up style

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,6 +14,7 @@
         <div id="map"></div>
 
 <!-- filters state -->
+    <h2> Log a new climb: </h2>
         <select name='state' id='state'>
             <option value='' disabled selected>STATE</option>
         </select><br>
@@ -42,20 +43,18 @@
     <div id='submitted'></div>
 
 
-<script src="http://code.jquery.com/jquery.js"></script>
+    <script src="http://code.jquery.com/jquery.js"></script>
 
 
-<script src="/static/user_map.js"></script>
+    <script src="/static/user_map.js"></script>
 
 
-<script src="/static/search.js"></script>
+    <script src="/static/search.js"></script>
 
 
- <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9qDiQS_jF-wRKvyNXlov2leRbMEq56Ig&callback=initMap">
-    </script>
-    
+     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9qDiQS_jF-wRKvyNXlov2leRbMEq56Ig&callback=initMap"></script>
+        
 
 {% endblock %}
