--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,7 +11,9 @@
 {% block content %}
 
     <h1>Welcome, {{ session['username'] }}!</h1>
-        <div id="map"></div>
+    <h3 id='points'></h3>
+    <div id="map"></div>
+
 
 <!-- filters state -->
     <h2> Log a new climb: </h2>
@@ -57,8 +59,9 @@
             <tr>
                 <th>Date</th>
                 <th>Name</th>
-                <th>Location</th>
-                <th>Grade</th>
+                <th>State</th>
+                <th>Area</th>
+                <th>Difficulty</th>
                 <th>Rating</th>
                 <th>Notes</th>
                 <th>Completed</th>
