--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,6 +9,10 @@
 
 
 {% block content %}
+    <form id='file-form'>
+        <input type='file' id='file-select' name='file'/>
+        <button type='submit' id='upload-button'>Upload</button>
+    </form>
 
     <h1>Welcome, {{ session['username'] }}!</h1>
     <h3 id='points'></h3>
@@ -28,7 +32,7 @@
         </select>
     
 <!-- logs climb info -->
-    <form action='/log-climb.json' id='log-climb' method='POST'>
+    <form id='log-climb' method='POST'>
         <select name='route' id='route'>
             <option value='' disabled selected>ROUTE</option>
         </select><br>
@@ -48,7 +52,7 @@
             <input type='checkbox' id='complete' name='complete' value='true'>
         </label><br>
 
-        <input type="file" id='photo' name="photo" accept="image/*">
+        <input type="file" id='photo' name='file' accept="image/*" >
         <br>
         
         <input type='submit' value='log'>
@@ -70,6 +74,9 @@
         </table>
 
     </div>
+
+
+
 
 
     <script src="http://code.jquery.com/jquery.js"></script>
