photo saves into folder

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,10 +9,10 @@
 
 
 {% block content %}
-<!--     <form id='file-form'>
+    <form id='file-form'>
         <input type='file' id='file-select' name='file'/>
         <button type='submit' id='upload-button'>Upload</button>
-    </form> -->
+    </form>
 
     <h1>Welcome, {{ session['username'] }}!</h1>
     <h3 id='points'></h3>
@@ -52,6 +52,7 @@
         <label>Complete
             <input type='checkbox' id='complete' name='complete' value='true'>
         </label><br>
+        
         <input type='file' id='photo' name='file'/>
         <br>
         <button type='submit' id='upload-button'>Log</button>
