updated user model and registration form removed name added climb level

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,6 @@
 
     <h1>Welcome, {{ session['username'] }}!</h1>
     <h3 id='points'></h3>
-    <div id="map"></div>
 
 
 <!-- filters state -->
@@ -81,15 +80,15 @@
     <script src="http://code.jquery.com/jquery.js"></script>
 
 
-    <script src="/static/user_map.js"></script>
+<!--     <script src="/static/user_map.js"></script -->>
 
 
     <script src="/static/user_dashboard.js"></script>
 
 
-     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+<!--      <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9qDiQS_jF-wRKvyNXlov2leRbMEq56Ig"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9qDiQS_jF-wRKvyNXlov2leRbMEq56Ig"></script> -->
         
 
 {% endblock %}
