--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,18 +22,11 @@
     <label>Password:
         <input type='password' name='password' required>
     </label><br>
-
-    <label>First name:
-        <input type='text' name='first_name' required>
-    </label><br>
-
-    <label>Last name:
-        <input type='text' name='last_name' required>
-    </label><br>
     
-    <label>Gender:
-        <input type='radio' name='gender' value='male' required>male
-        <input type='radio' name='gender' value='female' required>female<br>
+    <label>Level:<br>
+        <input type='radio' name='level' value='beginner' required>beginner<br>
+        <input type='radio' name='level' value='intermediate' required>intermediate<br>
+        <input type='radio' name='level' value='advanced' required>advanced<br>
     </label>
 
     <input type='submit' value='Create Account'>
