--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,10 +22,19 @@
     <label>Password:
         <input type='password' name='password' required>
     </label><br>
+
+    <label>Email:
+        <input type='email' name='email' required>
+    </label><br>
     
-    <label>Level:<br>
-        <input type='radio' name='level' value='beginner' required>beginner<br>
-        <input type='radio' name='level' value='intermediate' required>intermediate<br>
+    <label>Sex:
+        <input type='radio' name='sex' value='F' required>female
+        <input type='radio' name='sex' value='M' required>male<br>
+    </label>
+    
+    <label>Level:
+        <input type='radio' name='level' value='beginner' required>beginner
+        <input type='radio' name='level' value='intermediate' required>intermediate
         <input type='radio' name='level' value='advanced' required>advanced<br>
     </label>
 
