seeded fake user logs

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,20 +17,20 @@
 <!-- filters state -->
     <h2> Log a new climb: </h2>
         <select name='state' id='state'>
-            <option value='' disabled selected>STATE</option>
+            <option disable selected value>STATE</option>
         </select><br>
 
 
 <!-- filters area -->
         <select name='area' id='area'>
-            <option value='' disabled selected>AREA</option>
+            <option disable selected value>AREA</option>
         </select>
     
 <!-- logs climb info -->
     <form id='log-climb'>
         
         <select name='route' id='route'>
-            <option value='' disabled selected>ROUTE</option>
+            <option disable selected value>ROUTE</option>
         </select><br>
         
         <label> Rate the climb:
