Bubble graph of user created

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
         <style>{% block style %} STYLIZE {% endblock %}</style>
         <link rel="stylesheet" href="static/styles.css">
         <script src ='https://code.jquery.com/jquery.js'></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js">
+</script>
     </head>
 <body>
     {% if 'username' in session %}
