linked bootstrap to base

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <title>{% block title %} TITLE GOES HERE {% endblock %}</title>
         <style>{% block style %} STYLIZE {% endblock %}</style>
         <link rel="stylesheet" href="static/styles.css">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
         <script src ='https://code.jquery.com/jquery.js'></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js">
 </script>
@@ -28,11 +29,10 @@
     {% endif %}
     </div>
 
-    <script>
-
-
-    </script>
+    <script src="http://code.jquery.com/jquery.js"></script>
     
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js"></script>
+
 
 
 </body>
