--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         <style>{% block style %} STYLIZE {% endblock %}</style>
         <link rel="stylesheet" href="static/styles.css">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
-        <script src ='https://code.jquery.com/jquery.js'></script>
+        <script src ='https://code.jquery.com/jquery.js'></script>    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.0/moment.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js">
 </script>
     </head>
