additional integration tests

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,10 +7,10 @@
 <h1>Welcome!</h1>
 <form action='/login' method='POST'>
     <label>Username:
-        <input type='username' name='username' required></label><br>
+        <input type='username' name='username' id='username' required></label><br>
     <label>Password:
-        <input type='password' name='password' required></label><br>
-    <input type='submit' value='log in'>
+        <input type='password' name='password' id='password' required></label><br>
+    <input type='submit' id='login' value='log in'>
 </form>
 
 <h2>Sign Up</h2>
