--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class='container'>
-        <button type='button' class='btn btn-info btn-lg' data-toggle='modal' data-target='#myModal'>Log A New Climb</button>
+        <button type='button' class='btn btn-info btn-lg' id='log-climb-btn' data-toggle='modal' data-target='#myModal'>Log A New Climb</button>
     </div>
 
     <div class='modal fade' id='myModal' role='document'>
