--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -78,13 +78,13 @@
 
     <div>
         <h3>Current Projects</h3>
-        <table id='projects'>
+        <table id='projects' class='table'>
             <tr>
                 <th onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(1)')" style="cursor:pointer">Date</th>
-                <th onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(2)')" style="cursor:pointer">Name</th>
-                <th onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(3)')" style="cursor:pointer">State</th>
-                <th onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(4)')" style="cursor:pointer">Area</th>
-                <th onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(5)')" style="cursor:pointer">Difficulty</th>
+                <th onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(2)')" style="cursor:pointer">Difficulty</th>
+                <th onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(3)')" style="cursor:pointer">Name</th>
+                <th onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(4)')" style="cursor:pointer">State</th>
+                <th onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(5)')" style="cursor:pointer">Area</th>
                 <th onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(6)')" style="cursor:pointer">Rating</th>
                 <th>Notes</th>
             </tr>
@@ -94,13 +94,13 @@
 
     <div>
         <h3>Completed Climbs</h3>
-        <table id='completedClimbs'>
+        <table id='completedClimbs' class='table'>
             <tr>
                 <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(1)')" style="cursor:pointer">Date</th>
-                <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(2)')" style="cursor:pointer">Name</th>
-                <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(3)')" style="cursor:pointer">State</th>
-                <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(4)')" style="cursor:pointer">Area</th>
-                <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(5)')" style="cursor:pointer">Difficulty</th>
+                <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(2)')" style="cursor:pointer">Difficulty</th>
+                <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(3)')" style="cursor:pointer">Name</th>
+                <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(4)')" style="cursor:pointer">State</th>
+                <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(5)')" style="cursor:pointer">Area</th>
                 <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(6)')" style="cursor:pointer">Rating</th>
                 <th>Notes</th>
             </tr>
