more current projects updates

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -87,6 +87,7 @@
                 <th onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(5)')" style="cursor:pointer">Area</th>
                 <th onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(6)')" style="cursor:pointer">Rating</th>
                 <th>Notes</th>
+                <th>Completed?</th>
             </tr>
 
         </table>
