adding log delete

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,7 +14,7 @@
 </form>
 
 <h2>Sign Up</h2>
-<form action='/register' method='POST'>
+<form action='/register' id='register' method='POST'>
     <label>Username:
         <input type='username' name='username' required>
     </label><br>
@@ -35,6 +35,5 @@
 
     <input type='submit' value='Create Account'>
 </form>
-
 
 {% endblock %}
